--- a/bloxorz/public/styles.css
+++ b/bloxorz/public/styles.css
@@ -4,7 +4,7 @@ body {
     position: relative;
 }
 #canvas {
-    background-color: blue;
+    background-color: black;
     height: 100vh;
     width: 100%;
     display: block;
